Fix band photo sizing on mobile

--- a/Stylophonix/Pages/Index.razor.css
+++ b/Stylophonix/Pages/Index.razor.css
@@ -1,9 +1,6 @@
 #band-photo {
     position: relative;
-    width: 567px;
-    max-width: 100vw;
-    height: 319px;
-    background: url("img/photos/Stylophonixklein19_black_initial.webp");
+    font-size: 0; /* required to avoid gap below photo */
 }
 
 #band-photo:after {
@@ -14,6 +11,7 @@
     width: 100%;
     height: 100%;
     background: url("img/photos/Stylophonixklein19_black.webp");
+    background-size: contain;
 
     animation-name: fadein;
     animation-duration: 2500ms;
